# vexide-template

./: .gitignore  Cargo.toml  README.md  armv7a-vexos-eabi.json  cargo-generate.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
scripts/: ci.rhai
src/: drivetrain.rs  lib.rs  main.rs
