[package]
name = "vexide-template"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = { git = "https://github.com/vexide/vexide.git", branch = "refactor/upstreamed-target+rust-std", features = [
    "full",
    "vex-sdk-jumptable",
    "vex-sdk-mock",
] }
